--- a/style.css
+++ b/style.css
@@ -85,14 +85,17 @@ header .icons #menu-bars{
 
 #search-form{
     position: fixed;
-    top: 0; left: 0;
+    top: -110%; left: 0;
     height: 100%; width: 100%;
     z-index: 1004;
     background: rgb(0,0,0,0.8);
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 0 1rem;
+    padding: 0 1rem; 
+}
+#search-form.active{
+    top:0;
 }
 
 #search-form #search-box{
@@ -119,11 +122,17 @@ header .icons #menu-bars{
     font-size: 3rem;
 }
 
-#search-form label:hover{
+ #search-form label:hover{
     color: var(--green);
+} 
+
+#search-form #close{
+    position: absolute;
+    color: #fff;
+    cursor: pointer;
+    top: 2rem; right: 3rem;
+    font-size: 5rem;
 }
-
-
 
 
 
