--- a/style.css
+++ b/style.css
@@ -23,6 +23,12 @@ html {
     scroll-padding-top: 5.5rem;
     scroll-behavior: smooth;
 }
+section{
+    padding: 2rem 9% ;
+ }
+ section:nth-child(even){
+    background: #eee;
+ }
 
 header {
     position: fixed;
@@ -133,6 +139,42 @@ header .icons #menu-bars{
     top: 2rem; right: 3rem;
     font-size: 5rem;
 }
+ 
+.home .home-slider .slide{
+    display:flex;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 2rem;
+    padding-top: 9rem;
+}
+
+.home .home-slider .slide .content{
+    flex: 1 1 45rem;
+}
+
+.home .home-slider .slide .image{
+    flex: 1 1 45rem;
+}
+
+.home .home-slider .slide .image img{
+    width: 100%;
+}
+
+.home .home-slider .slide .content span{
+    color: var(--green);
+    font-size: 2.5rem;
+}
+
+.home .home-slider .slide .content h3{
+    color: var(--black);
+    font-size: 7rem;
+}
+
+.home .home-slider .slide .content p{
+    color: var(--light-color);
+    font-size: 2rem;
+}
+
 
 
 
@@ -176,6 +218,10 @@ header .icons #menu-bars{
         padding: 1.5rem;
         margin: 1rem;
         background-color: #eee;
+    }
+    #search-form #search-box{
+        width: 90%;
+        margin: 0 1rem;
     }
 }
 
