--- a/style.css
+++ b/style.css
@@ -29,6 +29,22 @@ section{
  section:nth-child(even){
     background: #eee;
  }
+.btn{
+    margin-top: 1.5rem;
+    display: inline-block;
+    font-size: 1.7rem;
+    color: #fff;
+    background: var(--black);
+    border-radius: .5rem;
+    cursor: pointer;
+    padding:.8rem 3rem;
+}
+
+.btn:hover{
+    background: var(--green);
+    letter-spacing: .1rem;
+}
+
 
 header {
     position: fixed;
@@ -158,6 +174,8 @@ header .icons #menu-bars{
 
 .home .home-slider .slide .image img{
     width: 100%;
+    z-index: -1;
+    border-radius: 100px;
 }
 
 .home .home-slider .slide .content span{
@@ -172,7 +190,9 @@ header .icons #menu-bars{
 
 .home .home-slider .slide .content p{
     color: var(--light-color);
-    font-size: 2rem;
+    font-size: 2.2rem;
+    padding: 0.5rem;
+    line-height: 1.5;
 }
 
 
