--- a/style.css
+++ b/style.css
@@ -218,6 +218,26 @@ header .icons #menu-bars{
     font-size: 5rem;
 }
 
+.dishes .box-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(28rem, 1fr));
+    gap:1.5rem;
+    
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
