--- a/style.css
+++ b/style.css
@@ -220,21 +220,48 @@ header .icons #menu-bars{
 
 .dishes .box-container .box img{
     width: 100%;
-    border-radius: 100%;
+    border-radius: 50%;
 }
 
 .dishes .box-container{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(28rem, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(40rem, 1fr));
     gap:1.5rem;
-    
+}
+.dishes .box-container .box .burger{
+    width: 280px;
+}
+.dishes .box-container .box{
+    padding: 2.5rem;
+    background: #fff;
+    border-radius: .5rem;
+    border: .1rem solid rgb(0, 0, 0, .2);
+    box-shadow: var(--box-shadow);
+    position: relative;
+    overflow: hidden;
+    text-align: center;
 }
 
+.dishes .box-container .box .fa-heart,
+.dishes .box-container .box .fa-eye{
+    position: absolute;
+    top: 1.5rem;
+    background: #fff;
+    border-radius: 50%;
+    height: 5rem ;
+    width: 5rem;
+    line-height: 5rem;
+    font-size: 2rem;
+    color: var(--black);
+}
 
+.dishes .box-container .box .fa-heart {
+    right: 1.5rem;
+}
 
-
-
-
+.dishes .box-container .box .fa-eye{
+    left: 1.5rem;
+}
 
 
 
