--- a/style.css
+++ b/style.css
@@ -219,17 +219,14 @@ header .icons #menu-bars{
 }
 
 .dishes .box-container .box img{
-    width: 100%;
-    border-radius: 50%;
+    height: 17rem;
+    margin: 1rem;border-radius: 48%;
 }
 
 .dishes .box-container{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(40rem, 1fr));
     gap:1.5rem;
-}
-.dishes .box-container .box .burger{
-    width: 280px;
 }
 .dishes .box-container .box{
     padding: 2.5rem;
@@ -255,18 +252,111 @@ header .icons #menu-bars{
     color: var(--black);
 }
 
+.dishes .box-container .box .fa-heart:hover,
+.dishes .box-container .box .fa-eye:hover{
+    background: var(--green);
+    color: #fff;
+}
+
 .dishes .box-container .box .fa-heart {
-    right: 1.5rem;
+    right: -15rem;
 }
 
 .dishes .box-container .box .fa-eye{
+    left: -15rem;
+}
+
+.dishes .box-container .box:hover .fa-heart{
+    right: 1.5rem;
+}
+
+.dishes .box-container .box:hover .fa-eye{
     left: 1.5rem;
 }
 
 
+.dishes .box-container .box h3{
+    color: var(--black);
+    font-size: 2.5rem;
+}
 
+.dishes .box-container .box .stars{
+    padding: 1rem 0;
+}
 
+.dishes .box-container .box .stars i{
+    font-size: 1.7rem;
+    color: var(--green);
+}
 
+.dishes .box-container .box span{
+    color: var(--green);
+    font-weight: bolder;
+    margin-right: 1rem;
+    font-size: 2.5rem;
+}
+
+.about .row{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+    align-items: center;
+}
+
+.about .row .image{
+    flex: 1 1 45rem;
+}
+
+.about .row .image img{
+    width: 100%;
+    border-radius: 10%;
+}
+
+.about .row .content{
+    flex: 1 1 45rem;
+}
+
+.about .row .content h3 {
+    color: var(--black);
+    font-size: 4rem;
+    padding: .5rem;
+}
+
+.about .row .content p {
+    color: var(--light-color);
+    font-size: 1.5rem;
+    padding: .5rem;
+    line-height: 2;
+}
+
+.about .row .content .icons-container{
+    display: flex;
+    gap: 1rem;
+    flex-wrap: wrap;
+    padding: 1rem 0;
+    margin-top: .5rem;
+}
+
+.about .row .content .icons-container .icons{
+    background: #eee;
+    border-radius: .5rem;
+    border: .1rem solid rgb(0, 0, 0, .2);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    flex: 1 1 17rem;
+    padding: 1.5rem 1rem;
+}
+.about .row .content .icons-container .icons i{
+    font-size: 2.5rem;
+    color: var(--green);
+}
+
+.about .row .content .icons-container .icons span{
+    font-size: 1.5rem;
+    color: var(--black);
+}
 
 
 
@@ -326,5 +416,13 @@ header .icons #menu-bars{
 
     html {
         font-size: 50%;
+    }
+    .dishes .box-container .box img{
+        height: auto;
+        width: 100%;
+        border-radius: 48%;
+    }
+    .dishes .box-container .box .burger{
+        width: 300px;
     }
 }
