--- a/style.css
+++ b/style.css
@@ -358,11 +358,6 @@ header .icons #menu-bars{
     color: var(--black);
 }
 
-.menu .box-container img{
-    height: 35rem;
-    margin: 3rem;
-    border-radius: 48%;
-}
 
 .menu .box-container{
     display: grid;
@@ -370,24 +365,84 @@ header .icons #menu-bars{
     gap: 1.5rem;
 }
 
+.menu .box-container .box {
+    background: #fff;
+    border: .1rem solid rgb(0, 0, 0, .2);
+    border-radius: .5rem;
+    box-shadow: var(--box-shadow);
+}
 
+.menu .box-container .box .image{
+    height: 45rem;
+    width: 100%;
+    padding: 1.5rem;
+    overflow: hidden;
+    position: relative;
+}
 
+.menu .box-container .box .image img{
+    height: 100%;
+    width: 100%;
+    border-radius: 48%;
+}
 
+.menu .box-container .box .image img:hover{
+    cursor: pointer;
+    height: 105%;
+    width: 105%;
+    margin-top: -1rem;
+    margin-left: -1rem;
+}
 
+.menu .box-container .box .image .fa-heart{
+    position: absolute;
+    top: 2.5rem; right: 2.5rem;
+    height: 5rem;
+    width: 5rem;
+    line-height: 5rem;
+    text-align: center;
+    font-size: 2rem;
+    background: #fff;
+    border-radius: 50%;
+    color: var(--black);
+}
 
+.menu .box-container .box .image .fa-heart:hover{
+    background-color: var(--green);
+    color: #fff;
+}
 
+.menu .box-container .box .content{
+    padding: 1rem;
+    padding-top: 0;
+}
 
+.menu .box-container .box .content .stars{
+    padding-bottom: 1rem;
+}
 
+.menu .box-container .box .content .stars i{
+    font-size: 1.7rem;
+    color: var(--green);
+}
 
+.menu .box-container .box .content h3{
+    color: var(--black);
+    font-size: 2.5rem;
+}
 
+.menu .box-container .box .content p{
+    color: var(--light-color);
+    font-size: 1.7rem;
+    padding: .5rem;
+    line-height: 1.5;
+}
 
-
-
-
-
-
-
-
+.menu .box-container .box .content .pirce{
+    color: var(--green);
+    margin-left: 1rem;
+    font-size: 2.5rem;
+}
 
 
 
