--- a/style.css
+++ b/style.css
@@ -490,14 +490,34 @@ header .icons #menu-bars{
     color: var(--light-color);
 }
 
+.order form{
+    width: 90rem;
+    border-radius: .5rem;
+    box-shadow: var(--box-shadow);
+    border: .1rem solid rgb(0, 0, 0, .2);
+    background: #fff;
+    padding: 1.5rem;
+    margin: 0 auto;
+}
 
+.order form .inputBox{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
 
+.order form .inputBox .input{
+    width: 49%;
+}
 
+.order form .inputBox .input span{
+    display: block;
+    padding: .5rem 0;
+    font-size: 1.5rem;
+    color: var(--light-color);
+}
 
-
-
-
-
+.order form .inputBox .input .
 
 
 
