--- a/style.css
+++ b/style.css
@@ -517,7 +517,24 @@ header .icons #menu-bars{
     color: var(--light-color);
 }
 
-.order form .inputBox .input .
+.order form .inputBox .input input{
+    background: #eee;
+    border-radius: .5rem;
+    padding: 1rem;
+    font-size: 1.6rem;
+    color: var(--black);
+    text-transform: none;
+    margin-bottom: 1rem;
+    width: 100%;
+}
+
+.order form .inputBox .input input:focus{
+    border: .1rem solid var(--green);
+}
+
+.order form .inputBox .input .btn{
+    margin-top: 0;
+}
 
 
 
@@ -551,6 +568,17 @@ header .icons #menu-bars{
     section{
         padding:2rem;
     }
+    .dishes .box-container .box img{
+        height: auto;
+        width: 100%;
+        border-radius: 48%;
+    }
+    .dishes .box-container .box .burger{
+        width: 300px;
+    }
+    .order form .inputBox .input{
+        width: 100%;
+    }
 }
 
 @media (max-width:768px){
@@ -582,17 +610,3 @@ header .icons #menu-bars{
     }
 }
 
-@media (max-width:991px){
-
-    html {
-        font-size: 50%;
-    }
-    .dishes .box-container .box img{
-        height: auto;
-        width: 100%;
-        border-radius: 48%;
-    }
-    .dishes .box-container .box .burger{
-        width: 300px;
-    }
-}
