--- a/style.css
+++ b/style.css
@@ -536,22 +536,51 @@ header .icons #menu-bars{
     margin-top: 0;
 }
 
+.footer .box-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+    gap: 1.5rem;
+}
 
+.footer .box-container .box {
+    padding: .5rem 0;
+    font-size: 2.5rem;
+    color: var(--green);
+}
 
+.footer .box-container .box a{
+    display: block;
+    padding: .5rem 0;
+    font-size: 1.5rem;
+    color: var(--light-color);
+}
 
+.footer .box-container .box a:hover {
+    color: var(--green);
+    text-decoration: underline;
+}
 
+.loader-cotainer{
+    position: fixed;
+    top: 0; left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: 10000;
+    background: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
 
+.loader-cotainer img{
+    width: 35rems;
+}
 
-
-
-
-
-
-
-
-
-
-
+.loader-cotainer.fade-out{
+    top: 110%;
+    opacity: 0;
+}
 
 
 /* media queries */ 
@@ -578,6 +607,11 @@ header .icons #menu-bars{
     }
     .order form .inputBox .input{
         width: 100%;
+    }
+    .footer .box-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+    gap: 1.5rem;
     }
 }
 
@@ -607,6 +641,11 @@ header .icons #menu-bars{
     #search-form #search-box{
         width: 90%;
         margin: 0 1rem;
+    }
+    .footer .box-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+    gap: 1.5rem;
     }
 }
 
