--- a/style.css
+++ b/style.css
@@ -649,3 +649,8 @@ header .icons #menu-bars{
     }
 }
 
+@media screen and (min-width: 480px) {
+    .order form .inputBox .input{
+        width: 70%;
+    }
+}
